Fixed preformatting text having inconsistent wrapping in the popup dialog for long unhandled answsers in the editor. Text wrapping would work in Chrome, but have a horizontal scrollbar in Firefox.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -847,6 +847,10 @@ md-card.oppia-gallery-tile {
   width: 24px;
 }
 
+pre.oppia-pre-wrapped-text {
+  white-space: pre-wrap;
+}
+
 .oppia-pre-avatar-oppia, .oppia-pre-avatar-user {
   position: relative;
 }
